WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157704
jsc: samplingProfilerStackTraces() without starting sampling should not cause jsc to crash
https://bugs.webkit.org/show_bug.cgi?id=157704
Summary
jsc: samplingProfilerStackTraces() without starting sampling should not cause...
Joseph Pecoraro
Reported
2016-05-13 20:58:03 PDT
* SUMMARY samplingProfilerStackTraces() without starting sampling should not cause jsc to crash Instead of crashing, lets throw an exception instead. * STEPS TO REPRODUCE
>>> samplingProfilerStackTraces()
=> RELEASE_ASSERT
Attachments
[PATCH] Proposed Fix
(4.58 KB, patch)
2016-05-13 20:59 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-05-13 20:59:29 PDT
Created
attachment 278918
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2016-05-13 22:50:45 PDT
Comment on
attachment 278918
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 278918 Committed
r200916
: <
http://trac.webkit.org/changeset/200916
>
WebKit Commit Bot
Comment 3
2016-05-13 22:50:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug