jsc: samplingProfilerStackTraces() without starting sampling should not cause jsc to crash https://bugs.webkit.org/show_bug.cgi?id=157704

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-05-13
Reviewed by Saam Barati.

* jsc.cpp:
(functionStartSamplingProfiler):
(functionSamplingProfilerStackTraces):
Throw an exception instead of crashing if we haven't started sampling.

* inspector/agents/InspectorScriptProfilerAgent.cpp:
(Inspector::InspectorScriptProfilerAgent::startTracking):
* runtime/VM.h:
* runtime/VM.cpp:
(JSC::VM::ensureSamplingProfiler):
Switch ensure to returning a reference, like most other ensures.

Canonical link: https://commits.webkit.org/175839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200916 268f45cc-cd09-0410-ab3c-d52691b4dbfc